# WyFormer-inference-demo

./: .gitignore  README.md  cpu_torch.toml  log  main.py  pyproject.toml  test_generate.py  uv.toml.cpu
.github/workflows/: pytest.yml
