[project]
name = "wyformer-inference-demo"
version = "0.1.0"
description = " A demonstration of using WyFomer as a standalone generative model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=1.7.2",
    "wyckofftransformer",
]

[tool.uv.sources]
wyckofftransformer = { git = "https://github.com/SymmetryAdvantage/WyckoffTransformer.git" }
